--- a/app/src/main/res/layout/activity_bestellen_abholen.xml
+++ b/app/src/main/res/layout/activity_bestellen_abholen.xml
@@ -124,13 +124,10 @@
         android:id="@+id/textViewBAKontaktAdr"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginLeft="28dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="22dp"
-        android:layout_marginEnd="281dp"
-        android:layout_marginRight="281dp"
         android:text="Kontaktadresse:"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/divider7" />
 
@@ -138,16 +135,11 @@
         android:id="@+id/baSurname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginLeft="28dp"
-        android:layout_marginEnd="173dp"
-        android:layout_marginRight="173dp"
-        android:layout_marginBottom="1dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:ems="10"
+        android:hint="Nachname"
         android:inputType="textPersonName"
-        android:text="Nachname"
-        app:layout_constraintBottom_toTopOf="@+id/baName"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewBAKontaktAdr" />
 
@@ -167,15 +159,11 @@
         android:id="@+id/baName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginLeft="28dp"
-        android:layout_marginEnd="173dp"
-        android:layout_marginRight="173dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:ems="10"
+        android:hint="Vorname"
         android:inputType="textPersonName"
-        android:text="Vorname"
-        app:layout_constraintBottom_toTopOf="@+id/baStreet"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/baSurname" />
 
@@ -183,15 +171,11 @@
         android:id="@+id/baStreet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="29dp"
-        android:layout_marginLeft="29dp"
-        android:layout_marginEnd="6dp"
-        android:layout_marginRight="6dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:ems="10"
+        android:hint="Strasse"
         android:inputType="textPersonName"
-        android:text="Strasse"
-        app:layout_constraintBottom_toTopOf="@+id/baPlz"
-        app:layout_constraintEnd_toStartOf="@+id/baHNr"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/baName" />
 
@@ -199,16 +183,12 @@
         android:id="@+id/baHNr"
         android:layout_width="100sp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="6dp"
-        android:layout_marginLeft="6dp"
+        android:layout_marginStart="11dp"
+        android:layout_marginLeft="11dp"
         android:layout_marginTop="132dp"
-        android:layout_marginEnd="66dp"
-        android:layout_marginRight="66dp"
         android:ems="10"
+        android:hint="HNr"
         android:inputType="textPersonName"
-        android:text="HNr"
-        app:layout_constraintBottom_toTopOf="@+id/baOrt"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/baStreet"
         app:layout_constraintTop_toBottomOf="@+id/divider7" />
 
@@ -216,12 +196,11 @@
         android:id="@+id/baPlz"
         android:layout_width="100sp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="29dp"
-        android:layout_marginLeft="29dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:ems="10"
+        android:hint="PLZ"
         android:inputType="textPersonName"
-        android:text="PLZ"
-        app:layout_constraintBottom_toTopOf="@+id/baEmail"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/baStreet" />
 
@@ -229,29 +208,24 @@
         android:id="@+id/baOrt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="53dp"
-        android:layout_marginRight="53dp"
+        android:layout_marginStart="11dp"
+        android:layout_marginLeft="11dp"
         android:ems="10"
+        android:hint="Ort"
         android:inputType="textPersonName"
-        android:text="Ort"
-        app:layout_constraintBottom_toTopOf="@+id/baEmail"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/baHNr" />
+        app:layout_constraintStart_toEndOf="@+id/baPlz"
+        app:layout_constraintTop_toBottomOf="@+id/baStreet" />
 
     <EditText
         android:id="@+id/baEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="29dp"
-        android:layout_marginLeft="29dp"
-        android:layout_marginEnd="172dp"
-        android:layout_marginRight="172dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:width="220sp"
         android:ems="10"
+        android:hint="Email (Emanuel@gmx.de)"
         android:inputType="textPersonName"
-        android:text="Email"
-        app:layout_constraintBottom_toTopOf="@+id/radioButtonBABargeld"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/baPlz" />
 
@@ -259,30 +233,21 @@
         android:id="@+id/radioButtonBAPayPal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="128dp"
-        android:layout_marginLeft="128dp"
-        android:layout_marginEnd="209dp"
-        android:layout_marginRight="209dp"
+        android:layout_marginStart="11dp"
+        android:layout_marginLeft="11dp"
+        android:layout_marginTop="4dp"
         android:text="PayPal"
-        app:layout_constraintBottom_toTopOf="@+id/radioButtonBAKreditkarte"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/radioButtonBABargeld" />
+        app:layout_constraintStart_toEndOf="@+id/radioButtonBABargeld"
+        app:layout_constraintTop_toBottomOf="@+id/baEmail" />
 
     <TextView
         android:id="@+id/textViewBABezahlen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="29dp"
-        android:layout_marginLeft="29dp"
-        android:layout_marginTop="13dp"
-        android:layout_marginEnd="2dp"
-        android:layout_marginRight="2dp"
-        android:layout_marginBottom="118dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="17dp"
         android:text="Bezahlvorgang:"
-        app:layout_constraintBottom_toTopOf="@+id/returnButton"
-        app:layout_constraintEnd_toStartOf="@+id/radioButtonBABargeld"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/baEmail" />
 
@@ -290,14 +255,10 @@
         android:id="@+id/radioButtonBABargeld"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="2dp"
-        android:layout_marginLeft="2dp"
-        android:layout_marginEnd="204dp"
-        android:layout_marginRight="204dp"
-        android:layout_marginBottom="1dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="4dp"
         android:text="Bargeld"
-        app:layout_constraintBottom_toTopOf="@+id/radioButtonBAPayPal"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textViewBABezahlen"
         app:layout_constraintTop_toBottomOf="@+id/baEmail" />
 
@@ -305,10 +266,9 @@
         android:id="@+id/returnButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="121dp"
+        android:layout_marginTop="124dp"
         android:onClick="back"
         android:text="zurueck"
-        app:layout_constraintEnd_toStartOf="@+id/abortButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewBABezahlen" />
 
@@ -316,98 +276,33 @@
         android:id="@+id/abortButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="11dp"
-        android:layout_marginRight="11dp"
+        android:layout_marginTop="108dp"
         android:onClick="abort"
         android:text="abbrechen"
-        app:layout_constraintEnd_toStartOf="@+id/kpBestellenButton"
         app:layout_constraintStart_toEndOf="@+id/returnButton"
-        app:layout_constraintTop_toBottomOf="@+id/radioButtonBAKreditkarte" />
+        app:layout_constraintTop_toBottomOf="@+id/radioButtonBAPayPal" />
 
     <Button
         android:id="@+id/kpBestellenButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="11dp"
-        android:layout_marginLeft="11dp"
-        android:layout_marginTop="196dp"
+        android:layout_marginStart="14dp"
+        android:layout_marginLeft="14dp"
+        android:layout_marginTop="108dp"
         android:onClick="buy"
         android:text="Kostenpflichtig\nbestellen"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/abortButton"
-        app:layout_constraintTop_toBottomOf="@+id/baOrt" />
+        app:layout_constraintTop_toBottomOf="@+id/radioButtonBAPayPal" />
 
     <RadioButton
         android:id="@+id/radioButtonBAKreditkarte"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="128dp"
-        android:layout_marginLeft="128dp"
-        android:layout_marginEnd="182dp"
-        android:layout_marginRight="182dp"
-        android:layout_marginBottom="7dp"
+        android:layout_marginStart="11dp"
+        android:layout_marginLeft="11dp"
+        android:layout_marginTop="49dp"
         android:text="Kreditkarte"
-        app:layout_constraintBottom_toTopOf="@+id/abortButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/radioButtonBAPayPal" />
-
-    <TextView
-        android:id="@+id/stepTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:fontFamily="sans-serif-black"
-        android:text="Schritt 1"
-        android:textColor="@android:color/white"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.975" />
-
-    <TextView
-        android:id="@+id/descriptionTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:fontFamily="sans-serif-light"
-        android:text="Schritt 2"
-        android:textColor="@android:color/white"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.977" />
-
-    <com.shuhart.stepview.StepView
-        android:id="@+id/step_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.976"
-        app:sv_doneCircleColor="@color/colorAccent"
-        app:sv_doneCircleRadius="12dp"
-        app:sv_doneStepLineColor="@color/colorAccent"
-        app:sv_doneStepMarkColor="@color/colorPrimary"
-        app:sv_nextStepLineColor="@color/colorAccent"
-        app:sv_nextTextColor="@color/colorAccent"
-        app:sv_selectedCircleColor="@color/colorAccent"
-        app:sv_selectedCircleRadius="12dp"
-        app:sv_selectedStepNumberColor="@color/colorPrimary"
-        app:sv_selectedTextColor="@color/colorAccent"
-        app:sv_stepLineWidth="1dp"
-        app:sv_stepNumberTextSize="18sp"
-        app:sv_stepPadding="4dp"
-        app:sv_stepViewStyle="@style/StepView" />
+        app:layout_constraintStart_toEndOf="@+id/radioButtonBAPayPal"
+        app:layout_constraintTop_toBottomOf="@+id/baOrt" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
